--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.4",
     "typescript": "^4.2.3",
@@ -45,6 +47,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-slick": "^0.23.4",
     "@types/styled-components": "^5.1.9",
     "prettier-plugin-style-order": "^0.2.2"
   }
