--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.4",
     "typescript": "^4.2.3",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
