--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "styled-reset": "^4.3.4",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.1",
-    "yup": "^0.32.9"
+    "yup": "^0.32.9",
+    "yup-phone": "^1.2.19"
   },
   "scripts": {
     "start": "react-scripts start",
