--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-redux": "^7.1.16",
     "formik": "^2.2.6",
     "react": "^17.0.2",
+    "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-dropdown-hook": "^1.0.1",
     "react-redux": "^7.2.3",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datepicker": "^3.1.8",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-slick": "^0.23.4",
     "@types/styled-components": "^5.1.9",
